--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -59,6 +59,22 @@
     transition: background-color 0.2s;
 }
 
-.CountdownButton:hover{
+.CountdownButton:not(:disabled):hover{
     background: var(--blue-dark);
+}
+
+.CountdownButtonActive{
+    background: var(--white);
+    color: var(--title);
+}
+
+.CountdownButtonActive:not(:disabled):hover{
+    background: var(--red);
+    color: var(--white);
+}
+
+.CountdownButton:disabled{
+    background: var(--white);
+    color: var(--text);
+    cursor: not-allowed;
 }
