--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -11,7 +11,7 @@
 
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
 
     background: var(--white);
     box-shadow: 0 0 60px rgba(0, 0, 0, 0.05);
