--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -15,6 +15,8 @@
     grid-template-columns: 1fr 1fr;
     gap:6.25rem;
     align-content: center;
+
+    margin-top: 1rem;
 }
 
 @media (max-width: 768px) {
